# iceplayer5

./: CMakeLists.txt  ChangeLog  INSTALL-arch  INSTALL-rpm  INSTALL-ubuntu  Makefile  archlinux系统  build.sh  iceplayer.conf  rpm管理器系统  ubuntu系统  参与开发的方式  联系
Data/: CMakeLists.txt  gtkrc  iceplayer.conf  iceplayer.desktop  zh_CN.po
Data/skin/blue_life_slax/: 皮肤设置.conf
Data/skin/koukou_slax/: 皮肤设置.conf
Data/skin/mac_slax/: 皮肤设置.conf
Sources/: CMakeLists.txt
data/: #CMakeLists.txt#  CMakeLists.txt  apps.iceplayer.UI.gschema.xml  gtkrc  iceplayer.conf  iceplayer.glade  iceplayer.ini  iceplayer.pot  id3  songlist  zh_CN.po~
data/locale/zh_CN/: iceplayer.mo
data/skin/new_style_slax/: 皮肤设置.conf
src/: CMakeLists.txt  about.c  about.cpp  about.h  common.c  common.cc  common.cpp  common.h  common.hxx  config.c  config.h  cscope.out  gui.c  gui.cc  gui.h  gui_listview.c  iceplayer.mo  main.c  main.cc  main.cpp  ui.cpp  ui.hxx
src.cpp/: CMakeLists.txt  common.cc  common.h  gui.cc  gui.h  main.cc
src.old/: AUTHORS  CMakeLists.txt  FIXME  about.c  about.cpp  about.h  common.c  common.cpp  common.h  configure.c  configure.h  core.c  core.cpp  core.h  description-pak  desktop_lrc.c  desktop_lrc.h  download.c  download.h  en_US.po  equalizer.c  equalizer.h  help.c  iceplayer.cbp  iceplayer.depend  iceplayer.layout  iceplayer.pot  id3.c  id3.h  instance.c  instance.h  keybinding.c  keybinding.h  list.c  list.cpp  list.h  lrc.c  lrc.cpp  lrc.h  main.c  (+12 more)
src.old/pls/: CMakeLists.txt  update.c  update.h
